app.nw/css/screen.less
/* normalize.css v3.0.1 | MIT License | git.io/normalize */
html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary{display:block}audio,canvas,progress,video{display:inline-block;vertical-align:baseline}audio:not([controls]){display:none;height:0}[hidden],template{display:none}a{background:transparent}a:active,a:hover{outline:0}abbr[title]{border-bottom:1px dotted}b,strong{font-weight:bold}dfn{font-style:italic}h1{font-size:2em;margin:.67em 0}mark{background:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-0.5em}sub{bottom:-0.25em}img{border:0}svg:not(:root){overflow:hidden}figure{margin:1em 40px}hr{-moz-box-sizing:content-box;box-sizing:content-box;height:0}pre{overflow:auto}code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}button,input,optgroup,select,textarea{color:inherit;font:inherit;margin:0}button{overflow:visible}button,select{text-transform:none}button,html input[type="button"],input[type="reset"],input[type="submit"]{-webkit-appearance:button;cursor:pointer}button[disabled],html input[disabled]{cursor:default}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}input{line-height:normal}input[type="checkbox"],input[type="radio"]{box-sizing:border-box;padding:0}input[type="number"]::-webkit-inner-spin-button,input[type="number"]::-webkit-outer-spin-button{height:auto}input[type="search"]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration{-webkit-appearance:none}fieldset{border:1px solid #c0c0c0;margin:0 2px;padding:.35em .625em .75em}legend{border:0;padding:0}textarea{overflow:auto}optgroup{font-weight:bold}table{border-collapse:collapse;border-spacing:0}td,th{padding:0}

/* Main Lib & Type */
* {
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

/* Helvetica Neue */
@font-face {
	font-family: 'Helvetica Neue';
	font-weight: 300;
	font-style: normal;
	src: url(../fonts/helvetica.woff) format('woff');
}

*:before,
*:after {
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

[data-ng-view]:before, [data-ng-view]:after,
.container:before, .container:after,
.clearfix:before, .clearfix:after {
	display: table;
	content: " ";
}

[data-ng-view]:after,
.container:after,
.clearfix:after {
	clear: both;
}

html, body {
	height: 100%;
}

body {
	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
	font-size: 12px;
	line-height: 1.4;
	font-weight: 300;
	background: #1a1a1a;
	color: #fff;
	box-shadow: inset 0 0 50px rgba(0, 0, 0, .5);
	text-shadow: 1px 1px 0 #333;
	-webkit-user-select: none;
	cursor: default;
}

footer {
	position: absolute;
	width: 100%;
	bottom: 15px;
	text-align: right;
	padding: 0 15px;
	font-size: 80%;
	color: #aaa;
}

h1, h2, h3 {
	font-weight: 300;
	margin: 0 0 15px;
}

h1 {
	font-size: 28px;
}

h2 {
	font-size: 24px;
}

h3 {
	font-size: 18px
}

label.radio {
	display: block;
	margin: 0 0 10px;
	text-align: left;
	font-size: 14px;
	color: #eaeaea;
	input {
		margin-right: 10px;
	}
}

button {
	border: 0;
	border-radius: 4px;
	background: #1a1a1a;
	color: #fff;
	border: 1px solid #333;
	padding: 6px 12px;
	box-shadow: 0 0 5px rgba(0, 0, 0, .5);
}

[data-ng-view] {
	width: 100%;
	height: 100%;
	&.ng-enter, &.ng-leave {
		position: absolute;
		transition: all .3s ease;
	}
	&.ng-leave {
	    opacity: 1;
		&.ng-leave-active {
			opacity: 0;
		}
	}
	&.ng-enter {
	    opacity: 0;
		&.ng-enter-active {
			opacity: 1;
		}
	}
}

.container {
	margin: 15px;
	&#connect {
		box-shadow: 0 0 20px rgba(0, 0, 0, .5);
		margin: 100px auto;
		width: 300px;
		padding: 10px 15px 15px;
		border-radius: 4px;
		text-align: center;
		button {
			font-size: 14px;
			margin-top: 10px;
		}
	}
	&#main {
		h1 {
			font-size: 60px;
			margin: 5px 0 30px;
		}
		.row {
			margin: 15px -15px;
			.half, .third, .buttons, .sliders {
				float: left;
				padding: 0 15px;
			}
			.half {
				width: 50%;
			}
			.third {
				width: 33.3333333%;
			}
			.buttons {
				width: 36%;
			}
			.sliders {
				width: 30.6666667%;
			}
			.row {
				margin: 0 -15px;
			}
		}
		.bar {
			height: 10px;
			border-radius: 4px;
			margin: 2px 0 10px;
			overflow: hidden;
			border: 1px solid #333;
			box-shadow: 0 0 5px rgba(0, 0, 0, .5);
			div {
				height: 100%;
				background: darken(#0f9, 20%);
			}
		}
		.right .bar div {
			background: darken(#f09, 20%);
		}
		.notes, .chords, .list {
			list-style-type: none;
			padding: 0;
			margin: 2px -1px 10px;
			li {
				a {
					display: block;
					background: #1a1a1a;
					color: #fff;
					text-align: center;
					box-shadow: 0 0 5px rgba(0, 0, 0, .5);
					cursor: pointer;
					transition: all .15s ease;
				}
				&.active a {
					background: darken(#09f, 20%);
					border-color: darken(#09f, 30%);
				}
			}
		}
		.notes, .chords {
			li {
				display: inline;
				a {
					float: left;
					padding: 7px 0;
					width: 31px;
					margin: 0 1px 2px;
					border: 1px solid #333;
				}
			}
		}
		.chords {
			li a {
				width: 38px;
				overflow: hidden;
				white-space: nowrap;
			}
		}
		.list {
			height: 175px;
			border: 1px solid #333;
			overflow-y: scroll;
			li {
				a {
					padding: 6px 12px;
					border-top: 1px solid #333;
				}
				&:first-child a {
					border-top: 0;
				}
			}
		}
		.calibration {
			text-align: center;
			margin-top: 30px;
			span {
				display: inline-block;
				padding: 6px 0;
			}
		}
		.third, .buttons {
			.right {
				float: right;
				padding-left: 5px;
				a {
					cursor: pointer;
				}
			}
		}
		.buttons .right {
			padding-right: 4px;
		}
		.tabs {
			clear: left;
			display: block;
			width: 64.7%;
			border-top: 1px solid #333;
			list-style-type: none;
			margin: 0 15px;
			padding: 0;
			li {
				float: left;
				a {
					position: relative;
					top: -1px;
					display: block;
					padding: 6px 12px;
					border-radius: 0 0 4px 4px;
					background: darken(#1a1a1a, 20%);
					color: #fff;
					text-align: center;
					box-shadow: 0 1px 5px rgba(0, 0, 0, .5);
					cursor: pointer;
					border: 1px solid #333;
					margin-left: 2px;
					transition: all .15s ease;
				}
				&.active a {
					background: #1a1a1a;
					border-top: 0;
				}
			}
		}
		.sliders {
			label {
				display: inline-block;
				margin-right: 5px;
			}
		}
		input {
			width: 100%;
			margin-top: 2px;
			margin-bottom: 10px;
			cursor: pointer;
			color: #333;
			&[type="checkbox"], &[type="radio"] {
				width: auto;
				margin-right: 5px;
			}
		}
	}
}

